fix the nav logo on iphone and growth image to right

--- a/FRONTEND/src/common/Growth_engine/growthEngine.module.css
+++ b/FRONTEND/src/common/Growth_engine/growthEngine.module.css
@@ -183,15 +183,14 @@
   .grow_image{
     bottom:-65% ;
     width: 180px;
-    right:0;
+    right:-22px;
   }
 }
 
 @media only screen and (max-width:500px){
   .grow_image{
     bottom:-83% ;
-    width: 180px;
-    right:0;
+
   }
 }
 
