--- a/FRONTEND/src/components/Header/Header.module.css
+++ b/FRONTEND/src/components/Header/Header.module.css
@@ -16,7 +16,7 @@
   position: relative;
 }
 .navbar_sublogo{
-position: absolute;
+/* position: absolute; */
 bottom: 31%;
 }
 
